<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/about_style">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/about"
                android:layout_margin="6dp"
                style="@style/about_logo"/>

            <TextView
                android:id="@+id/about_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content"
                style="@style/about_description" />

            <TextView
                android:id="@+id/copyright"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/copyright" />
        </LinearLayout>

        <!-- layout con mis datos -->

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/about_disclaimer">

            <include layout="@layout/isaacpc"/>
        </FrameLayout>
    </LinearLayout>

</ScrollView>