<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <LinearLayout
        android:id="@+id/llDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="6dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="6dp"
        android:background="#333"
        android:gravity="left"
        android:padding="10dp" >

        
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/imagen_item"
            android:src="@drawable/ic_fallback" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/radio_introduccion"
                android:textColor="#FFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/radio_introduccion_notas"
                android:textColor="#FFF"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/button_main_color"
            android:contentDescription="@string/imagen_item"
            android:scaleType="centerInside"
            android:src="@drawable/ic_tab_play" />

        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/button_main_color"
            android:contentDescription="@string/imagen_item"
            android:enabled="false"
            android:fitsSystemWindows="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_tab_stop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtRadioMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/radio_instrucciones"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/pbRadio"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/progressbar_horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />
    </LinearLayout>


</RelativeLayout>