<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/lista_generica_background"
    android:cacheColorHint="@color/lista_generica_background"
    android:orientation="vertical"
    android:padding="2dp" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_black"
        android:paddingBottom="4dp"
        android:paddingLeft="6dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_generico_background"
            android:orientation="vertical"
            android:padding="3dp"
            android:visibility="visible" >

            <RelativeLayout
                android:id="@+id/frameImagenNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="0dp"
                android:padding="0dp"
                android:visibility="visible" >

                <ImageView
                    android:id="@+id/videoThumb"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thumbnail_heigth"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/imagen_item"
                    android:background="@android:color/black"
                    android:src="@drawable/ic_fallback_grande" />

                <TextView
                    android:id="@+id/duration"
                    style="@style/MRFont.videoDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="2dp"
                    android:background="#000"
                    android:padding="2dp" />

                <ProgressBar
                    android:id="@+id/pbThumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="2dp" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:padding="0dp" >

                    <ImageButton
                        android:id="@+id/ibSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:background="@drawable/ic_action_overflow"
                        android:contentDescription="@string/imagen_item"/>

                    <TextView
                        android:id="@+id/userVideoTitleTextView"
                        style="@style/MRFont.listItemTitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:layout_toLeftOf="@+id/ibSettings"
                        android:text="@string/dataNotFound" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtDescripcion"
                    style="@style/MRFont.listItemSubtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:maxLines="6"
                    android:text="@string/dataNotFound" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="4dp"
                    android:gravity="bottom"
                    android:orientation="horizontal" >

                      <TextView
                        android:id="@+id/viewCount"
                        style="@style/MRFont.listItemDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|right" />
                    

                    <TextView
                        android:id="@+id/separatorSubtitle"
                        style="@style/MRFont.listItemSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:gravity="bottom|left"
                        android:text="@string/separator_subtitle" />

                    <TextView
                        android:id="@+id/viewDate"
                        style="@style/MRFont.listItemDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:gravity="bottom|left" />
                  
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>